--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
        text-align: center;
       }
       .video{
-       /Internal borders have 1px width, thus need to add 4 x 1 px to 120 px. */
+       /*Internal borders have 1px width, thus need to add 4 x 1 px to 120 px. */
        height: 124px;
        line-height:124px;
       }
